# conda-actions-setup

./: LICENSE  README.md  main.cpp
.conda/recipe/: bld.bat  meta.yaml
.github/workflows/: CondaBuild.yml
plugin/gr/: CMakeLists.txt  main.cpp
plugin/gr/.conda/recipe/: bld.bat  meta.yaml
plugin/gr/cmake/: cmake_uninstall.cmake
